# PROYECTO_FINAL_TERMODINAMICA

./: .gitignore  INICIAR_VLE_WINDOWS.bat  README.md  VLE_GammaPhi.spec  VLE_GammaPhi_onefile.spec  chat.md  cli.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
datos/: base_datos_VLE.json
scripts/: build_windows.ps1  build_windows_onefile.ps1  run_macos.sh
tests/: test_azeotrope.py  test_cubic_eos.py  test_exporters.py  test_margules_fit.py  test_parameter_fitter.py  test_repository.py  test_service.py  test_thermodynamics.py  test_ui_smoke.py  test_units.py  test_validation.py  test_van_laar_fit.py
vle_poc/: __init__.py  activity.py  azeotrope.py  cubic_eos.py  domain.py  exporters.py  fugacity.py  margules_fit.py  parameter_fitter.py  paths.py  properties.py  repository.py  service.py  styles.py  ui.py  units.py  validation.py  van_laar_fit.py
