[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vle-gamma-phi-poc"
version = "0.1.0"
description = "POC PySide6 para el proyecto VLE gamma-phi"
requires-python = ">=3.12,<3.15"
dependencies = [
  "PySide6>=6.8,<7",
  "matplotlib>=3.10,<4",
  "numpy>=2.1,<3",
  "scipy>=1.15,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10", "pyinstaller>=6.12,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["vle_poc"]
